# Bachelorarbeit

./: Plan.md  README.md
Arbeit/: Bachelorarbeit.tex  titlepage.tex
Arbeit/Vorläufige Kapitel/: Einleitung.tex
Arbeit/bilder/: ergebnis_vergleich.png~  sliverScanline.png~
Arbeit/sections/: ausblick.tex  einleitung.tex  literatur.tex  praxisTeil.tex  theoretischeGrundlagen.tex  verwandteArbeiten.tex
Project/: Cargo.toml
Project/src/: Cargo.toml  earclipping.rs  gui.rs  main.rs  page.rs
Project/src/dep/: mod.rs
Project/src/dep/iteration/: eca_primitive.rs  mod.rs  preview.rs
Project/src/dep/menu/: draw_panel.rs  mod.rs  program_settings.rs  tools.rs
Project/src/dep/modules/: algorithm.rs  geometry.rs  heuristic.rs  message.rs  style.rs
Project/src/dep/result/: result_view.rs
Project/src/dependencies/: settings.rs
Project/temp dump/: Cargo.toml  draw_panel.rs
Proposal/: proposal.ist  proposal.tex
Seminar/Intro/: ba_intro.odp
Seminar/Zwischenstand/: ba_zwischenstand1.odp
Sources/: Sources.md
Verteidigung/: .~lock.BA_Verteidigung.odp#  BA_Verteidigung.odp
polytrivis/src/: Cargo.toml  main.rs
polytrivis/src/dep/: mod.rs
polytrivis/src/dep/eca_primitiv/: eca.rs  grid.rs  mod.rs
polytrivis/src/dep/iteration/: preview.rs
polytrivis/src/dep/menu/: draw_panel.rs  tools.rs
polytrivis/src/dep/modules/: algorithm.rs  geometry.rs  heuristic.rs  message.rs  mod.rs  style.rs
polytrivis/src/dep/result/: mod.rs  result_view.rs
