[package]
name = "src"
version = "0.1.0"
author = "Christoph Pooch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4", features = ["canvas"]}
iced_aw = { version = "0.2", default-features = false, features = ["card"]}
num-traits = "0.2"
[[bin]]
name = "src"
path = "main.rs"
